--- a/app/page-catalog.html
+++ b/app/page-catalog.html
@@ -18,8 +18,8 @@
 				</ul>
 			</div>
 			<h1 class="title text-xxl">Каталог</h1>
-		</div>
-	</div>
+		</div><!-- /.container -->
+	</div><!-- /.page-heading -->
 
 	<!-- Page content -->
 	<div class="page-catalog">
