--- a/app/page-home.html
+++ b/app/page-home.html
@@ -192,12 +192,12 @@
 			<!-- Tabs -->
 			<div class="h-about-tabs">
 				<div class="nav nav-tabs" role="tablist">
-					<a id="tab-1" href="#about-tab-1" class="nav-link active" data-toggle="tab" role="tab">Нам доверяют</a>
-					<a id="tab-2" href="#about-tab-2" class="nav-link" data-toggle="tab" role="tab">Удобно выбирать</a>
-					<a id="tab-2" href="#about-tab-3" class="nav-link" data-toggle="tab" role="tab">Как сделать заказ</a>
-					<a id="tab-2" href="#about-tab-4" class="nav-link" data-toggle="tab" role="tab">Способы оплаты</a>
-					<a id="tab-2" href="#about-tab-5" class="nav-link" data-toggle="tab" role="tab">Способы доставки</a>
-					<a id="tab-2" href="#about-tab-6" class="nav-link" data-toggle="tab" role="tab">Акции и скидки</a>
+					<a href="#about-tab-1" class="nav-link active" data-toggle="tab" role="tab">Нам доверяют</a>
+					<a href="#about-tab-2" class="nav-link" data-toggle="tab" role="tab">Удобно выбирать</a>
+					<a href="#about-tab-3" class="nav-link" data-toggle="tab" role="tab">Как сделать заказ</a>
+					<a href="#about-tab-4" class="nav-link" data-toggle="tab" role="tab">Способы оплаты</a>
+					<a href="#about-tab-5" class="nav-link" data-toggle="tab" role="tab">Способы доставки</a>
+					<a href="#about-tab-6" class="nav-link" data-toggle="tab" role="tab">Акции и скидки</a>
 				</div>
 			</div>
 
@@ -265,7 +265,7 @@
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/1.jpg" alt="">
@@ -282,7 +282,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/2.jpg" alt="">
@@ -299,7 +299,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/3.jpg" alt="">
@@ -316,7 +316,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/4.jpg" alt="">
@@ -333,7 +333,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/5.jpg" alt="">
@@ -350,7 +350,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/6.jpg" alt="">
@@ -367,7 +367,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/7.jpg" alt="">
@@ -384,7 +384,7 @@
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="card card-collection">
+							<div class="card card-brand">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
 										<img src="./images/collections/8.jpg" alt="">
@@ -430,12 +430,12 @@
 			<!-- Tabs -->
 			<div class="h-products-tabs">
 				<div class="nav nav-tabs nav-tabs--centered" role="tablist">
-					<a id="tab-1" href="#products-tab-1" class="nav-link active" data-toggle="tab" role="tab">Плитка</a>
-					<a id="tab-2" href="#products-tab-2" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
-					<a id="tab-3" href="#products-tab-3" class="nav-link" data-toggle="tab" role="tab">Плитка для кухни</a>
-					<a id="tab-4" href="#products-tab-4" class="nav-link" data-toggle="tab" role="tab">Плитка</a>
-					<a id="tab-5" href="#products-tab-5" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
-					<a id="tab-6" href="#products-tab-6" class="nav-link" data-toggle="tab" role="tab">Плитка для кухни</a>
+					<a href="#products-tab-1" class="nav-link active" data-toggle="tab" role="tab">Плитка</a>
+					<a href="#products-tab-2" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
+					<a href="#products-tab-3" class="nav-link" data-toggle="tab" role="tab">Плитка для кухни</a>
+					<a href="#products-tab-4" class="nav-link" data-toggle="tab" role="tab">Плитка</a>
+					<a href="#products-tab-5" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
+					<a href="#products-tab-6" class="nav-link" data-toggle="tab" role="tab">Плитка для кухни</a>
 				</div>
 			</div>
 
@@ -584,8 +584,8 @@
 
 			<!-- Tabs -->
 			<div class="nav nav-tabs nav-tabs--centered" role="tablist">
-				<a id="tab-1" href="#articles-tab" class="nav-link active" data-toggle="tab" role="tab">Новости</a>
-				<a id="tab-2" href="#news-tab" class="nav-link" data-toggle="tab" role="tab">Статьи</a>
+				<a href="#articles-tab" class="nav-link active" data-toggle="tab" role="tab">Новости</a>
+				<a href="#news-tab" class="nav-link" data-toggle="tab" role="tab">Статьи</a>
 			</div>
 
 			<!-- Tabs content -->
