Mobile responsive catalog, filters. Collection card. Refactoring code

--- a/app/page-catalog-products.html
+++ b/app/page-catalog-products.html
@@ -34,10 +34,10 @@
 
 			<!-- Shop tabs -->
 			<div class="shop-tabs">
-				<div class="shop-tabs-item _current">
+				<div class="shop-tabs-item">
 					<a href="page-catalog-collections.html">Коллекции <span>2456</span></a>
 				</div><!-- /.shop-tabs-item -->
-				<div class="shop-tabs-item">
+				<div class="shop-tabs-item _current">
 					<a href="page-catalog-products.html">Товары <span>32457</span></a>
 				</div><!-- /.shop-tabs-item -->
 			</div><!-- /.shop-tabs -->
@@ -46,18 +46,30 @@
 			@@include('parts/shop/shop-filters.html')
 
 			<!-- Products list -->
-			<div class="row row-items-48 row-cols-1 row-cols-md-2 row-cols-xl-3">
+			<div class="row row-items-24 row-cols-2 row-cols-md-3 row-cols-lg-4">
 				<div class="col">
-					@@include('parts/collection-cards/collection-1.html')
+					@@include('parts/product-cards/product-1.html')
 				</div><!-- /.col -->
 				<div class="col">
-					@@include('parts/collection-cards/collection-2.html')
+					@@include('parts/product-cards/product-2.html')
 				</div><!-- /.col -->
 				<div class="col">
-					@@include('parts/collection-cards/collection-1.html')
+					@@include('parts/product-cards/product-1.html')
 				</div><!-- /.col -->
 				<div class="col">
-					@@include('parts/collection-cards/collection-2.html')
+					@@include('parts/product-cards/product-2.html')
+				</div><!-- /.col -->
+				<div class="col">
+					@@include('parts/product-cards/product-1.html')
+				</div><!-- /.col -->
+				<div class="col">
+					@@include('parts/product-cards/product-2.html')
+				</div><!-- /.col -->
+				<div class="col">
+					@@include('parts/product-cards/product-1.html')
+				</div><!-- /.col -->
+				<div class="col">
+					@@include('parts/product-cards/product-2.html')
 				</div><!-- /.col -->
 			</div><!-- /.row -->
 
