--- a/app/page-home.html
+++ b/app/page-home.html
@@ -95,7 +95,7 @@
 			<div class="row row-items-16">
 				<div class="col-md-6 col-lg-7">
 					<div class="h-categories-item img-cover zoom-photo">
-						<a href="#" class="h-categories-link">
+						<a href="page-catalog.html" class="h-categories-link">
 							<div class="label">
 								<h3 class="mb-0 text-lg">Плитка</h3>
 								<span class="text-300">120 коллекций</span>
@@ -106,7 +106,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-5">
 					<div class="h-categories-item img-cover zoom-photo">
-						<a href="#" class="h-categories-link">
+						<a href="page-catalog.html" class="h-categories-link">
 							<div class="label">
 								<h3 class="mb-0 text-lg">Плитка для ванной</h3>
 								<span class="text-300">86 коллекций</span>
@@ -117,7 +117,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-4 col-xl-6">
 					<div class="h-categories-item img-cover zoom-photo">
-						<a href="#" class="h-categories-link">
+						<a href="page-catalog.html" class="h-categories-link">
 							<div class="label">
 								<h3 class="mb-0 text-lg">Плитка для кухни</h3>
 								<span class="text-300">150 коллекции</span>
@@ -128,7 +128,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-4 col-xl-6">
 					<div class="h-categories-item img-cover zoom-photo">
-						<a href="#" class="h-categories-link">
+						<a href="page-catalog.html" class="h-categories-link">
 							<div class="label">
 								<h3 class="mb-0 text-lg">Керамогранит</h3>
 								<span class="text-300">167 коллекции</span>
@@ -139,7 +139,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-4 col-xl-5">
 					<div class="h-categories-item img-cover zoom-photo">
-						<a href="#" class="h-categories-link">
+						<a href="page-catalog.html" class="h-categories-link">
 							<div class="label">
 								<h3 class="mb-0 text-lg">Мозаика</h3>
 								<span class="text-300">120 коллекций</span>
@@ -150,7 +150,7 @@
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-7 col-xl-5">
 					<div class="h-categories-item img-cover zoom-photo">
-						<a href="#" class="h-categories-link">
+						<a href="page-catalog.html" class="h-categories-link">
 							<div class="label">
 								<h3 class="mb-0 text-lg">Ступени</h3>
 								<span class="text-300">1200 коллекций</span>
@@ -161,7 +161,7 @@
 				</div><!-- /.col -->
 				<div class="col-lg-5 col-xl-2">
 					<div class="h-categories-item h-categories-item--more">
-						<a href="#" class="h-categories-all">
+						<a href="page-catalog.html" class="h-categories-all">
 							<div class="picture">
 								<svg width="88" height="144" viewBox="0 0 88 144" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<rect x="0.5" y="88.5" width="23" height="23"/>
@@ -424,7 +424,7 @@
 		<div class="container">
 			<div class="section-heading">
 				<h2 class="title">Популярные товары</h2>
-				<a href="#" class="btn btn-corner">Все товары</a>
+				<a href="page-catalog-products.html" class="btn btn-corner">Все товары</a>
 			</div>
 
 			<!-- Tabs -->
