--- a/app/parts/shop/shop-subcategories.html
+++ b/app/parts/shop/shop-subcategories.html
@@ -1,5 +1,5 @@
-<div class="shop-categories">
-	<div class="row row-items-16 row-cols-xl-5 row-cols-xxl-6">
+<div class="shop-categories show-more">
+	<div class="show-more-list row row-items-16 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xxl-6">
 		<div class="col">
 			<a href="#" class="shop-categories-item">
 				<div class="photo img-cover">
@@ -43,46 +43,6 @@
 		<div class="col">
 			<a href="#" class="shop-categories-item">
 				<div class="photo img-cover">
-					<img src="./images/collections/6.jpg" alt="">
-				</div>
-				<div class="title">Декоративная</div>
-			</a>
-		</div><!-- /.col -->
-		<div class="col">
-			<a href="#" class="shop-categories-item">
-				<div class="photo img-cover">
-					<img src="./images/collections/1.jpg" alt="">
-				</div>
-				<div class="title">Настенная</div>
-			</a>
-		</div><!-- /.col -->
-		<div class="col">
-			<a href="#" class="shop-categories-item">
-				<div class="photo img-cover">
-					<img src="./images/collections/2.jpg" alt="">
-				</div>
-				<div class="title">Напольная</div>
-			</a>
-		</div><!-- /.col -->
-		<div class="col">
-			<a href="#" class="shop-categories-item">
-				<div class="photo img-cover">
-					<img src="./images/collections/3.jpg" alt="">
-				</div>
-				<div class="title">Мозаика</div>
-			</a>
-		</div><!-- /.col -->
-		<div class="col">
-			<a href="#" class="shop-categories-item">
-				<div class="photo img-cover">
-					<img src="./images/collections/4.jpg" alt="">
-				</div>
-				<div class="title">Бежевая</div>
-			</a>
-		</div><!-- /.col -->
-		<div class="col">
-			<a href="#" class="shop-categories-item">
-				<div class="photo img-cover">
 					<img src="./images/collections/5.jpg" alt="">
 				</div>
 				<div class="title">Серая</div>
@@ -91,10 +51,76 @@
 		<div class="col">
 			<a href="#" class="shop-categories-item">
 				<div class="photo img-cover">
-					<img src="./images/collections/6.jpg" alt="">
+					<img src="./images/collections/1.jpg" alt="">
+				</div>
+				<div class="title">Недорогая</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/2.jpg" alt="">
 				</div>
 				<div class="title">Декоративная</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/3.jpg" alt="">
+				</div>
+				<div class="title">Белая</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/4.jpg" alt="">
+				</div>
+				<div class="title">Глянцевая</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/5.jpg" alt="">
+				</div>
+				<div class="title">Матовая</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/5.jpg" alt="">
+				</div>
+				<div class="title">Белая</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/5.jpg" alt="">
+				</div>
+				<div class="title">Матовая</div>
+			</a>
+		</div><!-- /.col -->
+		<div class="col">
+			<a href="#" class="shop-categories-item">
+				<div class="photo img-cover">
+					<img src="./images/collections/5.jpg" alt="">
+				</div>
+				<div class="title">Белая</div>
 			</a>
 		</div><!-- /.col -->
 	</div><!-- /.row -->
+	<div class="mt-24 text-center">
+		<button class="btn btn-more btn-more--show">
+			<span>Показать ещё</span>
+			<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+		</button>
+		<button class="btn btn-more btn-more--hide">
+			<span>Скрыть</span>
+			<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+		</button>
+	</div>
 </div><!-- /.shop-categories -->
