--- a/app/parts/calculation-project.html
+++ b/app/parts/calculation-project.html
@@ -18,7 +18,7 @@
 				<div id="calc-project-tab-1" class="tab-pane fade show active" role="tabpanel">
 					<form class="calc-project-form">
 						<div class="row row-items-24">
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="text" class="form-control" placeholder="ФИО" autocomplete="off" required>
@@ -26,7 +26,7 @@
 									</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="tel" class="form-control" placeholder="+7 (___) ___ __ __" minlength="11" autocomplete="off" required>
@@ -38,7 +38,7 @@
 									<label for="calc-project-phone-mask-1" class="form-checkbox-label">Показать маску ввода телефона</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="email" class="form-control" placeholder="Электронная почта" autocomplete="off" required>
@@ -50,23 +50,21 @@
 								<textarea rows="1" class="form-textarea" placeholder="Комментарий"></textarea>
 							</div>
 						</div><!-- /.row -->
-						<div class="mt-32">
-							<div class="row">
-								<div class="col">
-									<label class="form-file">
-										<input type="file">
-										<div class="form-file-placeholder">
-											<svg class="icon icon-attachment"><use xlink:href="./images/symbol-defs.svg#attachment"></use></svg>
-											<span class="placeholder">Прикрепить файл с заявкой</span>
-											<span class="name"></span>
-										</div>
-									</label>
-								</div>
-								<div class="col-auto">
-									<button type="submit" class="btn btn-secondary">Отправить</button>
-								</div>
+						<div class="row row-items-16 mt-32">
+							<div class="col-md">
+								<label class="form-file">
+									<input type="file">
+									<div class="form-file-placeholder">
+										<svg class="icon icon-attachment"><use xlink:href="./images/symbol-defs.svg#attachment"></use></svg>
+										<span class="placeholder">Прикрепить файл с заявкой</span>
+										<span class="name"></span>
+									</div>
+								</label>
 							</div>
-						</div>
+							<div class="col-md-auto">
+								<button type="submit" class="form-submit btn btn-secondary">Отправить</button>
+							</div>
+						</div><!-- /.row -->
 					</form><!-- /.calc-project-form -->
 				</div><!-- /.tab-pane -->
 
@@ -74,7 +72,7 @@
 				<div id="calc-project-tab-2" class="tab-pane fade" role="tabpanel">
 					<form class="calc-project-form">
 						<div class="row row-items-24">
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="text" class="form-control" placeholder="ФИО" autocomplete="off" required>
@@ -82,7 +80,7 @@
 									</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="tel" class="form-control" placeholder="+7 (___) ___ __ __" minlength="11" autocomplete="off" required>
@@ -94,7 +92,7 @@
 									<label for="calc-project-phone-mask-2" class="form-checkbox-label">Показать маску ввода телефона</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="email" class="form-control" placeholder="Электронная почта" autocomplete="off" required>
@@ -102,7 +100,7 @@
 									</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="text" class="form-control" placeholder="Компания / ИП" autocomplete="off" required>
@@ -110,7 +108,7 @@
 									</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="text" class="form-control" placeholder="ИНН" autocomplete="off" required>
@@ -118,7 +116,7 @@
 									</label>
 								</div>
 							</div><!-- /.col -->
-							<div class="col-4">
+							<div class="col-md-4">
 								<div class="form-placeholder">
 									<label>
 										<input type="text" class="form-control" placeholder="Р/С" autocomplete="off" required>
@@ -130,23 +128,21 @@
 								<textarea rows="1" class="form-textarea" placeholder="Комментарий"></textarea>
 							</div>
 						</div><!-- /.row -->
-						<div class="mt-32">
-							<div class="row">
-								<div class="col">
-									<label class="form-file">
-										<input type="file">
-										<div class="form-file-placeholder">
-											<svg class="icon icon-attachment"><use xlink:href="./images/symbol-defs.svg#attachment"></use></svg>
-											<span class="placeholder">Прикрепить файл с заявкой</span>
-											<span class="name"></span>
-										</div>
-									</label>
-								</div>
-								<div class="col-auto">
-									<button type="submit" class="btn btn-secondary">Отправить</button>
-								</div>
+						<div class="row row-items-16 mt-32">
+							<div class="col-md">
+								<label class="form-file">
+									<input type="file">
+									<div class="form-file-placeholder">
+										<svg class="icon icon-attachment"><use xlink:href="./images/symbol-defs.svg#attachment"></use></svg>
+										<span class="placeholder">Прикрепить файл с заявкой</span>
+										<span class="name"></span>
+									</div>
+								</label>
 							</div>
-						</div>
+							<div class="col-md-auto">
+								<button type="submit" class="form-submit btn btn-secondary">Отправить</button>
+							</div>
+						</div><!-- /.row -->
 					</form><!-- /.calc-project-form -->
 				</div><!-- /.tab-pane -->
 
