--- a/app/parts/shop/shop-rubrics.html
+++ b/app/parts/shop/shop-rubrics.html
@@ -1,6 +1,6 @@
-<section class="mt-40">
+<section class="mt-40 show-more">
 	<h2 class="mb-32 text-xl">Популярные подборки</h2>
-	<div class="row row-items-16 row-cols-1 row-cols-xs-2 row-cols-md-3 row-cols-xl-5 row-cols-xxl-6">
+	<div class="show-more-list row row-items-16 row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-md-3 row-cols-xxl-6">
 		<div class="col">
 			<a href="#" class="rubric">Современный стиль</a>
 		</div><!-- /.col -->
@@ -38,4 +38,14 @@
 			<a href="#" class="rubric">Современный</a>
 		</div><!-- /.col -->
 	</div><!-- /.row -->
+	<div class="mt-24 text-center">
+		<button class="btn btn-more btn-more--show">
+			<span>Показать ещё</span>
+			<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+		</button>
+		<button class="btn btn-more btn-more--hide">
+			<span>Скрыть</span>
+			<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+		</button>
+	</div>
 </section>
