Fixed url paths

--- a/app/page-home.html
+++ b/app/page-home.html
@@ -11,22 +11,22 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
-								<img src="/images/home-slide-01.jpg" alt="">
+								<img src="./images/home-slide-01.jpg" alt="">
 							</div>
 						</div>
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
-								<img src="/images/home-slide-02.jpg" alt="">
+								<img src="./images/home-slide-02.jpg" alt="">
 							</div>
 						</div>
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
-								<img src="/images/home-slide-01.jpg" alt="">
+								<img src="./images/home-slide-01.jpg" alt="">
 							</div>
 						</div>
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
-								<img src="/images/home-slide-02.jpg" alt="">
+								<img src="./images/home-slide-02.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -55,7 +55,7 @@
 				<div class="col-auto col-lg-4">
 					<div class="h-advantages-item">
 						<div class="h-advantages-icon">
-							<img src="/images/icons/adv-1.svg" alt="96 человек получили услуги">
+							<img src="./images/icons/adv-1.svg" alt="96 человек получили услуги">
 						</div>
 						<div class="h-advantages-text">
 							<h5 class="title text-lg"><span class="text-orange">96 человек</span> получили услуги</h5>
@@ -66,7 +66,7 @@
 				<div class="col-auto col-lg-4">
 					<div class="h-advantages-item">
 						<div class="h-advantages-icon">
-							<img src="/images/icons/adv-2.svg" alt="439 заказов сделано">
+							<img src="./images/icons/adv-2.svg" alt="439 заказов сделано">
 						</div>
 						<div class="h-advantages-text">
 							<h5 class="title text-lg"><span class="text-orange">439 заказов</span> сделано</h5>
@@ -77,7 +77,7 @@
 				<div class="col-auto col-lg-4">
 					<div class="h-advantages-item">
 						<div class="h-advantages-icon">
-							<img src="/images/icons/adv-3.svg" alt="140 тонн материалов отгруженно">
+							<img src="./images/icons/adv-3.svg" alt="140 тонн материалов отгруженно">
 						</div>
 						<div class="h-advantages-text">
 							<h5 class="title text-lg"><span class="text-orange">140 тонн материалов</span> отгруженно</h5>
