--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -118,7 +118,7 @@
 										<p>Без выходных<br> с 10:00 до 18:00</p>
 									</div>
 								</div><!-- /.dropdown-stores-item -->
-								<a href="#" class="link-arrow">Подробнее <svg class="icon icon-arrow-small"><use xlink:href="images/symbol-defs.svg#arrow-small"></use></svg></a>
+								<a href="#" class="link-arrow">Подробнее <svg class="icon icon-arrow-small"><use xlink:href="./images/symbol-defs.svg#arrow-small"></use></svg></a>
 							</div><!-- /.dropdown-menu -->
 						</div><!-- /.dropdown -->
 					</div><!-- /.stores -->
@@ -216,7 +216,7 @@
 										</a>
 									</div><!-- /.products-list -->
 									<div class="mt-16">
-										<a href="#" class="link-arrow">Все результаты <svg class="icon icon-arrow-small"><use xlink:href="images/symbol-defs.svg#arrow-small"></use></svg></a>
+										<a href="#" class="link-arrow">Все результаты <svg class="icon icon-arrow-small"><use xlink:href="./images/symbol-defs.svg#arrow-small"></use></svg></a>
 									</div>
 								</div><!-- /.search-results-products -->
 							</div><!-- /.search-results-wrapper -->
