--- a/app/parts/shop/shop-filters.html
+++ b/app/parts/shop/shop-filters.html
@@ -5,7 +5,7 @@
 		<div class="shop-filters-actions">
 			<a href="#" class="shop-filters-reset _is-shown" role="button" rel="nofollow">
 				<span>Сбросить фильтр</span>
-				<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+				<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 			</a>
 			<button type="button" class="shop-filters-close btn btn-close">
 				<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
@@ -28,7 +28,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Салоны</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -56,7 +56,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Тип помещения</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -84,7 +84,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Тип плитки</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -104,7 +104,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Рисунок</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -116,7 +116,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Поверхность</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -128,7 +128,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Материал</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -140,7 +140,7 @@
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="shop-filters-name"><span class="key">Цвет</span> <span class="values"></span></span>
-						<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
@@ -170,7 +170,7 @@
 		<div class="sort dropdown">
 			<button type="button" class="sort-btn btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<span>Сортировки</span>
-				<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+				<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 			</button>
 			<div class="sort-list dropdown-menu">
 				<a rel="nofollow" href="?sort=-popular">Популярные</a>
