--- a/app/parts/shop/shop-rubrics.html
+++ b/app/parts/shop/shop-rubrics.html
@@ -41,11 +41,11 @@
 	<div class="mt-24 text-center">
 		<button class="btn btn-more btn-more--show">
 			<span>Показать ещё</span>
-			<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+			<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 		</button>
 		<button class="btn btn-more btn-more--hide">
 			<span>Скрыть</span>
-			<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+			<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 		</button>
 	</div>
 </section>
