--- a/app/parts/collection-cards/collection-1.html
+++ b/app/parts/collection-cards/collection-1.html
@@ -66,11 +66,11 @@
 			<div class="exemplars-more">
 				<button class="btn btn-more btn-more--show">
 					<span>Показать ещё</span>
-					<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+					<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 				</button>
 				<button class="btn btn-more btn-more--hide">
 					<span>Скрыть</span>
-					<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+					<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 				</button>
 			</div>
 		</div>
