--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -14,7 +14,7 @@
 								<div class="stores-header" id="footer-stores-title">
 									<button type="button" class="btn btn-dropdown" data-toggle="collapse" data-target="#footer-stores" aria-expanded="true" aria-controls="footer-stores">
 										<span>Салоны</span>
-										<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+										<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 									</button>
 								</div>
 								<div class="stores-content collapse show" id="footer-stores" aria-labelledby="footer-stores-title">
