--- a/app/parts/modals/success-modal.html
+++ b/app/parts/modals/success-modal.html
@@ -10,7 +10,7 @@
 			<div class="modal-body">
 				<div class="success-form">
 					<div class="success-form-icon">
-						<svg class="icon icon-check"><use xlink:href="images/symbol-defs.svg#check"></use></svg>
+						<svg class="icon icon-check"><use xlink:href="./images/symbol-defs.svg#check"></use></svg>
 					</div>
 					<h5 class="success-form-title text-xl">Успешно!</h5>
 					<p class="success-form-descr">Мы получили Ваше обращение и ответим в течение 30 минут</p>
