Brands page. Released filter price range inputs. Added h1 heading at home page.

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
 					<h3 class="mb-20 text-md w-bold">Общие страницы</h3>
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
+						<li><a href="page-brands.html">Производители</a></li>
 					</ol>
 				</div>
 				<div class="col-sm-6">
