--- a/app/page-home.html
+++ b/app/page-home.html
@@ -33,10 +33,10 @@
 					<!-- Slider navigation -->
 					<div class="h-heroes-slider-nav swiper-nav swiper-nav--secondary">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-arrow-long"><use xlink:href="/images/symbol-defs.svg#arrow-long"></use></svg>
+							<svg class="icon icon-arrow-long"><use xlink:href="./images/symbol-defs.svg#arrow-long"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-arrow-long"><use xlink:href="/images/symbol-defs.svg#arrow-long"></use></svg>
+							<svg class="icon icon-arrow-long"><use xlink:href="./images/symbol-defs.svg#arrow-long"></use></svg>
 						</button>
 					</div>
 				</div>
@@ -51,6 +51,9 @@
 	<!-- Section: Advantages -->
 	<section class="h-advantages section mt-80">
 		<div class="container">
+			<div class="h-advantages-title">
+				<h1 class="text-xl text-center">Интернет-магазин керамической плитки</h1>
+			</div>
 			<div class="h-advantages-list row flex-nowrap flex-xl-wrap">
 				<div class="col-auto col-lg-4">
 					<div class="h-advantages-item">
@@ -404,10 +407,10 @@
 					<!-- Slider navigation -->
 					<div class="h-brands-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+							<svg class="icon icon-slider-arrow"><use xlink:href="./images/symbol-defs.svg#slider-arrow"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+							<svg class="icon icon-slider-arrow"><use xlink:href="./images/symbol-defs.svg#slider-arrow"></use></svg>
 						</button>
 					</div>
 				</div>
@@ -470,10 +473,10 @@
 							<!-- Slider navigation -->
 							<div class="products-slider-nav swiper-nav">
 								<button class="swiper-button-prev btn">
-									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+									<svg class="icon icon-slider-arrow"><use xlink:href="./images/symbol-defs.svg#slider-arrow"></use></svg>
 								</button>
 								<button class="swiper-button-next btn">
-									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+									<svg class="icon icon-slider-arrow"><use xlink:href="./images/symbol-defs.svg#slider-arrow"></use></svg>
 								</button>
 							</div>
 						</div>
@@ -512,10 +515,10 @@
 							<!-- Slider navigation -->
 							<div class="products-slider-nav swiper-nav">
 								<button class="swiper-button-prev btn">
-									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+									<svg class="icon icon-slider-arrow"><use xlink:href="./images/symbol-defs.svg#slider-arrow"></use></svg>
 								</button>
 								<button class="swiper-button-next btn">
-									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+									<svg class="icon icon-slider-arrow"><use xlink:href="./images/symbol-defs.svg#slider-arrow"></use></svg>
 								</button>
 							</div>
 						</div>
