--- a/app/parts/product-cards/product-2.html
+++ b/app/parts/product-cards/product-2.html
@@ -22,7 +22,7 @@
 			<button type="submit" class="btn btn-primary btn-purchase _added">
 				<div class="before-added">В корзину</div>
 				<div class="after-added">
-					<svg class="icon icon-checked"><use xlink:href="/images/symbol-defs.svg#checked"></use></svg>
+					<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
 					<span>Товар добавлен<br> в <a href="#">корзину</a></span>
 				</div>
 			</button>
