--- a/app/parts/shop/shop-filters.html
+++ b/app/parts/shop/shop-filters.html
@@ -17,8 +17,9 @@
 					<span class="shop-filters-price-label">Цена:</span>
 					<div class="shop-filters-price-slider">
 						<div class="shop-filters-price-handle" data-slidermin="500" data-slidermax="28250"></div>
-						<div class="shop-filters-price-range" hidden>
+						<div class="shop-filters-price-range">
 							<input type="number" name="p-price-from" id="filter-price-from" value="3100" class="form-control shop-filters-price-from">
+							<span>—</span>
 							<input type="number" name="p-price-to" id="filter-price-to" value="26500" class="form-control shop-filters-price-to">
 						</div>
 					</div>
